2007-02-05  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (AC_INIT): Changed version 
	to 0.94-pre.

2007-02-05  Dalibor Topic  <robilad@kaffe.org>

	* NEWS: Updated with some of the information
	from the ChangeLog.

2007-02-05  Dalibor Topic  <robilad@kaffe.org>

	* fastjar.texi: -i works now.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Added comment
	for previous patch. Added check to ensure
	that the META-INF directory is not being
	indexed.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Replace '\0'
	character with '\n' before adding the 
	index to the jar file to avoid having
	a zero byte at the end of the index file.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c: Added 2007 to copyright years,
	and claimed my changes.
	(OPTION_STRING) -i takes an argument.
	(main) Set jarfile to the argument when option 
	-i is parsed. Modified help string when no
	action is given to include -i.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.c (build_index): Initialize 
	a ziplistentry's next_element with NULL
	before passing it to add_list_entry to
	fix a crash. Don't re-assign filename
	of a zip entry with the index name, as 
	that turns directories into files, and 
	breaks the zip files.

2007-02-04  Olivier Jolly <olivier.jolly@pcedev.com>

	* jartool.c: Enable fastjar to update an 
	existing .jar with an META-INF/INDEX.LIST 
	aka -i support. Still, it doesn't process 
	the MANIFEST.MF to index files coming from 
	dependant archives.

2007-02-04  Dalibor Topic  <robilad@kaffe.org>

	* jartool.h (__attribute__): Explicitely
	define it as a macro with one parameter.
	That allows splint to be used for checking 
	the code.

2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* configure: Regenerated.

	* configure.ac: Updated AC_INIT and 
	AM_INIT_AUTOMAKE to use the modern form.


2007-02-03  Dalibor Topic  <robilad@kaffe.org>

	* compress.c, compress.h, jargrep.c, 